--- a/index.ipynb
+++ b/index.ipynb
@@ -37,24 +37,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[I ate 1 slice(s) of pie! There is/are 5 slice(s) left.]\n",
+      "[I ate 2 slice(s) of pie! There is/are 4 slice(s) left.]\n",
+      "[I ate 3 slice(s) of pie! There is/are 3 slice(s) left.]\n",
+      "[I ate 4 slice(s) of pie! There is/are 2 slice(s) left.]\n",
+      "[I ate 5 slice(s) of pie! There is/are 1 slice(s) left.]\n",
+      "[I ate 6 slice(s) of pie! There is/are 0 slice(s) left.]\n"
+     ]
+    }
+   ],
    "source": [
     "slices_of_pie = 6\n",
     "slices_eaten = 0\n",
     "# use a while loop to eat each slice of pie\n",
-    "# add each slice to the slices_eaten variable"
+    "# add each slice to the slices_eaten variable\n",
+    "while slices_of_pie > 0:\n",
+    "    slices_of_pie -=1\n",
+    "    slices_eaten +=1\n",
+    "    print(f\"[I ate {slices_eaten} slice(s) of pie! There is/are {slices_of_pie} slice(s) left.]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1198"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "time_for_breakfast = 1468 # in seconds\n",
     "number_of_cooked_pancakes = 0\n",
+    "\n",
+    "while number_of_cooked_pancakes < 5 and time_for_breakfast > 0:\n",
+    "    # Time to make pancake - 27 seconds on each side, 1 at a time\n",
+    "    time_for_breakfast -= sum([27,27])\n",
+    "    number_of_cooked_pancakes +=1\n",
+    "time_for_breakfast\n",
     "# use a while loop to make yourself 5 pancakes for breakfast\n",
     "# each pancake takes 27 seconds to cook on each side\n",
     "# you must decrease the time_for_breakfast each time you \n",
@@ -82,8 +116,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Material from lesson here for me as reference:\n",
+    "'''\n",
+    "numbers = list(range(0,30))\n",
+    "new_list = []\n",
+    "for num in numbers:\n",
+    "    if len(new_list) > 4:\n",
+    "        print(f\"We have enough even numbers in new_list ({len(new_list)}). break will stop the for loop now\")\n",
+    "        break\n",
+    "    elif num % 2 == 0:\n",
+    "        new_list.append(num)\n",
+    "    elif num % 2 != 0:\n",
+    "        continue\n",
+    "        print(\"i never get executed\")\n",
+    "    print(num, \"is even.\")\n",
+    "    print(\"this does not print for odd numbers\\nbecause the continue statement skips\\nthe code that follows in the for loop\\nand goes straight back to the next element in the for loop\")\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We fed 15 patrons.\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28]\n",
+      "There are 15 patrons still hungry!\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n"
+     ]
+    }
+   ],
+   "source": [
     "line_of_hungry_patrons = list(range(0,30))\n",
     "fed_patrons = []\n",
+    "for line_of_hungry_patron in line_of_hungry_patrons:\n",
+    "    # Limiting length of list to 15 or fewer elements (not necessary due to range, but just to be sure)\n",
+    "    if len(fed_patrons) >= 15:\n",
+    "        break\n",
+    "    # Target the even patrons (elements) in our list    \n",
+    "    elif line_of_hungry_patron % 2 == 0:\n",
+    "        # Feed them and remove them from our list of hungry patrons.\n",
+    "        fed_patrons.append(line_of_hungry_patron)\n",
+    "        line_of_hungry_patrons.remove(line_of_hungry_patron)\n",
+    "        continue\n",
+    "# Test:        \n",
+    "print(f\"We fed {len(fed_patrons)} patrons.\")\n",
+    "print(fed_patrons)\n",
+    "print(f\"There are {len(line_of_hungry_patrons)} patrons still hungry!\")\n",
+    "print(line_of_hungry_patrons)\n",
+    "\n",
     "# use a while loop to to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
     "# then remove the even numbered patrons from the line_of_hungry_patrons\n",
@@ -106,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,59 +207,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first dog person on our list is Katie. We checked 2 records.\n"
+     ]
+    }
+   ],
    "source": [
     "# use the for loop below to find the *first* person in the list of people that has a dog as their pet\n",
     "# the iteration count shouldn't exceed 2 iterations\n",
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
+    "    # Iterate:\n",
     "    iteration_count += 1\n",
-    "    pass"
+    "    # Define our stop point and print output:\n",
+    "    if person['pet'] == 'Dog':\n",
+    "        print(f\"The first dog person on our list is {person['name']}. We checked {iteration_count} records.\")\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Owen']\n",
+      "['Josh']\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of the cat owners who are under the age of 28\n",
     "cat_owners = None\n",
-    "# for loop goes here"
+    "\n",
+    "# for loop goes here\n",
+    "for person in people:\n",
+    "    # Create an empty list that we'll append to as we iterate:\n",
+    "    cat_owners = []\n",
+    "    # Define our parameters and add matching names to our list:\n",
+    "    if person['pet'] == \"Cat\" and person['age'] < 28:\n",
+    "        cat_owners.append(person['name'])\n",
+    "        print(cat_owners)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first person who is above 29 years old is Katie.\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to find the first person who is above 29 years old in our list of people\n",
     "# remember to use a break and or continue statement\n",
     "thirty_something_yr_old = None\n",
-    "# for loop goes here"
+    "# for loop goes here\n",
+    "for person in people:\n",
+    "    # Defining what we want, printing the result, and ending our loop:\n",
+    "    if person['age'] > 29:\n",
+    "        print(f\"The first person who is above 29 years old is {person['name']}.\")\n",
+    "        break\n",
+    "    # Continue until we identify desired output:\n",
+    "    else:\n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is our list of dog owner names: ['Katie', 'Estelle', 'Gustav'].\n",
+      "Here is our list of dog names: ['Frank', 'Gabby', 'Helen'].\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of person names and another list of pet names for all dog owners\n",
-    "dog_owner_names = None\n",
-    "dog_names = None\n",
-    "# for loop goes here"
+    "dog_owner_names = []\n",
+    "dog_names = []\n",
+    "# for loop goes here\n",
+    "for person in people:\n",
+    "    # Identify values matching condition set below and add elements to list:\n",
+    "    if person['pet'] == 'Dog':\n",
+    "        dog_owner_names.append(person['name'])\n",
+    "        dog_names.append(person['pet_name'])\n",
+    "print(f\"Here is our list of dog owner names: {dog_owner_names}.\")\n",
+    "print(f\"Here is our list of dog names: {dog_names}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 61, 63, 65, 67, 69, 71, 73, 75, 77, 79]\n",
+      "1575\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
     "# each time there is an odd number, add 10 to it and append it to the list_of_odd_numbers_plus_ten\n",
@@ -183,7 +338,17 @@
     "list_of_numbers = list(range(0,100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
     "for number in list_of_numbers:\n",
-    "    pass"
+    "    # Limit list to 35 elements:\n",
+    "    if len(list_of_odd_numbers_plus_ten) >= 35:\n",
+    "        break\n",
+    "    # Identify odd numbers in 'list_of_numbers', add 10, and append to 'list_of_odd_numbers_plus_ten'\n",
+    "    elif number %2 != 0:\n",
+    "        list_of_odd_numbers_plus_ten.append(number + 10)\n",
+    "        continue\n",
+    "print(list_of_odd_numbers_plus_ten)\n",
+    "# The answers from GH includes a sum of these numbers not in the prompt here but I'll do it anyway:\n",
+    "sum_of_odd_numbers = sum(list_of_odd_numbers_plus_ten)\n",
+    "print(sum_of_odd_numbers)"
    ]
   },
   {
@@ -203,9 +368,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -217,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
